--- a/sources/customer-io-source/package.json
+++ b/sources/customer-io-source/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "axios-rate-limit": "1.4.0",
     "axios-mock-adapter": "^1.20.0",
     "commander": "^9.3.0",
     "faros-airbyte-cdk": "0.0.1",
